plugins {
    id 'java'
    id 'application'
    id 'com.github.johnrengelman.shadow' version '7.+'
    id 'edu.sc.seis.launch4j' version '3.0.6'
    // https://github.com/File5/intellij-idea-guidesigner-plugin
    id 'io.github.file5.guidesigner' version '1.0.2'
}

repositories {
    mavenCentral()
    maven { url 'https://jitpack.io' }
}

dependencies {
    // https://bitbucket.org/javacommons/java17-lib/src/main/
    implementation 'org.bitbucket.javacommons:java17-lib:2024.0919.0011.28'

    // https://mvnrepository.com/artifact/com.jetbrains.intellij.java/java-gui-forms-rt
    implementation "com.jetbrains.intellij.java:java-gui-forms-rt:+"
    // https://mvnrepository.com/artifact/com.jgoodies/forms
    implementation 'com.jgoodies:forms:1.2.1'

    // https://mvnrepository.com/artifact/org.eclipse.swt/org.eclipse.swt.win32.win32.x86_64
    //implementation 'org.eclipse.swt:org.eclipse.swt.win32.win32.x86_64:4.3'
    // https://mvnrepository.com/artifact/org.eclipse.platform/org.eclipse.swt.win32.win32.x86_64
    //implementation 'org.eclipse.platform:org.eclipse.swt.win32.win32.x86_64:3.127.0'

    //testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    implementation 'org.junit.jupiter:junit-jupiter:5.9.1'

    // https://mvnrepository.com/artifact/com.microsoft.playwright/playwright
    //implementation 'com.microsoft.playwright:playwright:1.47.0'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(11)
    }
}

compileJava.options.encoding = 'UTF-8'
compileTestJava.options.encoding = 'UTF-8'

archivesBaseName = 'noname'

application {
    mainClass = 'app.Main'
}

shadowJar {
    zip64 true
}

test {
    useJUnitPlatform()
    testLogging {
        showStandardStreams true
        events 'started', 'skipped', 'passed', 'failed'
        exceptionFormat 'full'
    }
}

launch4j {
    mainClassName = 'app.Main'
    icon = "${projectDir}/duke256.ico"
    bundledJrePath = './jre-min'
    downloadUrl = 'https://github.com/corretto/corretto-22/releases/latest'
}

tasks.register('run1', JavaExec) {
    main = 'app.MainG_old'
    group = 'application'
    classpath = sourceSets.main.runtimeClasspath
    args = ['arg1', 'arg2©']
}

tasks.register('run2', JavaExec) {
    main = 'app.MainStream2'
    group = 'application'
    classpath = sourceSets.main.runtimeClasspath
    args = ['arg1', 'arg2©']
}

tasks.register('run3', JavaExec) {
    main = 'app.MainStream3'
    group = 'application'
    classpath = sourceSets.main.runtimeClasspath
    args = ['arg1', 'arg2©']
}

tasks.register('runQiita', JavaExec) {
    main = 'qiita.Qiita01'
    group = 'application'
    classpath = sourceSets.main.runtimeClasspath
    args = ['arg1', 'arg2©']
}

tasks.register('runSample', JavaExec) {
    main = 'sample.SwingWorkerSample'
    group = 'application'
    classpath = sourceSets.main.runtimeClasspath
    args = ['arg1', 'arg2©']
}

tasks.register('copy_assets') {
    group = 'shadow'
    project.delete(files("${buildDir}/libs/assets") {
        //exclude '*.jar'
    })
    copy {
        from '.'
        into 'build/libs/'
        include 'assets/**'
    }
}
copy_assets.dependsOn shadowJar

tasks.register('runShadow1', JavaExec) {
    group = 'application'
    main = 'demo.GUI01'
    classpath = files(shadowJar.archiveFile)
    args = ['arg1', 'arg2']
}
//runShadow1.dependsOn shadowJar
runShadow1.dependsOn copy_assets

tasks.register('runShadow2', JavaExec) {
    group = 'application'
    main = 'app.Main2'
    classpath = files(shadowJar.archiveFile)
    args = ['arg1', 'arg2']
}
//runShadow2.dependsOn shadowJar
runShadow2.dependsOn copy_assets
